crates/ty_python_semantic/resources/mdtest/snapshots/string.md_-_String_annotations_-_Partially_deferred_a…_-_Python_less_than_3.1…_(5e6477d05ddea33f).snap
---
source: crates/ty_test/src/lib.rs
expression: snapshot
---

---
mdtest name: string.md - String annotations - Partially deferred annotations - Python less than 3.14
mdtest path: crates/ty_python_semantic/resources/mdtest/annotations/string.md
---

# Python source files

## mdtest_snippet.py

```
 1 | from typing import TypeVar, Callable, Protocol, TypedDict
 2 | 
 3 | class TD(TypedDict): ...
 4 | 
 5 | class P(Protocol):
 6 |     x: int
 7 | 
 8 | T = TypeVar("T")
 9 | 
10 | # fmt: off
11 | def f(
12 |     # error: [unsupported-operator]
13 |     a: int | "Foo",
14 |     # error: [unsupported-operator]
15 |     # error: [unsupported-operator]
16 |     b: int | "memoryview" | bytes,
17 |     # error: [unsupported-operator]
18 |     c: "TD" | None,
19 |     # error: [unsupported-operator]
20 |     d: "P" | None,
21 |     # fine: `TypeVar.__or__` accepts strings at runtime
22 |     e: T | "Foo",
23 |     # fine: _SpecialForm.__ror__` accepts strings at runtime
24 |     f: "Foo" | Callable[..., None],
25 | ):
26 |     reveal_type(a)  # revealed: int | Foo
27 |     reveal_type(b)  # revealed: int | memoryview[int] | bytes
28 |     reveal_type(c)  # revealed: TD | None
29 |     reveal_type(d)  # revealed: P | None
30 |     reveal_type(e)  # revealed: T@f | Foo
31 |     reveal_type(f)  # revealed: Foo | ((...) -> None)
32 | 
33 | # fmt: on
34 | 
35 | class Foo: ...
36 | 
37 | # error: [unsupported-operator]
38 | X = list["int" | None]
```

# Diagnostics

```
error[unsupported-operator]: Unsupported `|` operation
  --> src/mdtest_snippet.py:13:8
   |
11 | def f(
12 |     # error: [unsupported-operator]
13 |     a: int | "Foo",
   |        ---^^^-----
   |        |     |
   |        |     Has type `Literal["Foo"]`
   |        Has type `<class 'int'>`
14 |     # error: [unsupported-operator]
15 |     # error: [unsupported-operator]
   |
info: All type expressions are evaluated at runtime by default on Python <3.14
info: Python 3.13 was assumed when inferring types because it was specified on the command line
help: Put quotes around the whole union rather than just one element
info: rule `unsupported-operator` is enabled by default

```

```
error[unsupported-operator]: Unsupported `|` operation
  --> src/mdtest_snippet.py:16:8
   |
14 |     # error: [unsupported-operator]
15 |     # error: [unsupported-operator]
16 |     b: int | "memoryview" | bytes,
   |        ---^^^------------
   |        |     |
   |        |     Has type `Literal["memoryview"]`
   |        Has type `<class 'int'>`
17 |     # error: [unsupported-operator]
18 |     c: "TD" | None,
   |
info: All type expressions are evaluated at runtime by default on Python <3.14
info: Python 3.13 was assumed when inferring types because it was specified on the command line
help: Put quotes around the whole union rather than just one element
info: rule `unsupported-operator` is enabled by default

```

```
error[unsupported-operator]: Unsupported `|` operation
  --> src/mdtest_snippet.py:16:8
   |
14 |     # error: [unsupported-operator]
15 |     # error: [unsupported-operator]
16 |     b: int | "memoryview" | bytes,
   |        ---^^^------------
   |        |     |
   |        |     Has type `Literal["memoryview"]`
   |        Has type `<class 'int'>`
17 |     # error: [unsupported-operator]
18 |     c: "TD" | None,
   |
info: rule `unsupported-operator` is enabled by default

```

```
error[unsupported-operator]: Unsupported `|` operation
  --> src/mdtest_snippet.py:18:8
   |
16 |     b: int | "memoryview" | bytes,
17 |     # error: [unsupported-operator]
18 |     c: "TD" | None,
   |        ----^^^----
   |        |      |
   |        |      Has type `None`
   |        Has type `Literal["TD"]`
19 |     # error: [unsupported-operator]
20 |     d: "P" | None,
   |
info: All type expressions are evaluated at runtime by default on Python <3.14
info: Python 3.13 was assumed when inferring types because it was specified on the command line
help: Put quotes around the whole union rather than just one element
info: rule `unsupported-operator` is enabled by default

```

```
error[unsupported-operator]: Unsupported `|` operation
  --> src/mdtest_snippet.py:20:8
   |
18 |     c: "TD" | None,
19 |     # error: [unsupported-operator]
20 |     d: "P" | None,
   |        ---^^^----
   |        |     |
   |        |     Has type `None`
   |        Has type `Literal["P"]`
21 |     # fine: `TypeVar.__or__` accepts strings at runtime
22 |     e: T | "Foo",
   |
info: All type expressions are evaluated at runtime by default on Python <3.14
info: Python 3.13 was assumed when inferring types because it was specified on the command line
help: Put quotes around the whole union rather than just one element
info: rule `unsupported-operator` is enabled by default

```

```
error[unsupported-operator]: Unsupported `|` operation
  --> src/mdtest_snippet.py:38:10
   |
37 | # error: [unsupported-operator]
38 | X = list["int" | None]
   |          -----^^^----
   |          |       |
   |          |       Has type `None`
   |          Has type `Literal["int"]`
   |
info: All type expressions are evaluated at runtime by default on Python <3.14
info: Python 3.13 was assumed when inferring types because it was specified on the command line
help: Put quotes around the whole union rather than just one element
info: rule `unsupported-operator` is enabled by default

```
